--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <h1>All things are prossible for everyone</h1>
+         <h1>Because I believe it</h1>
+         <p>
+            I think it's very important to have a feedback loop, where you're constantly thinking about 
+            what you've done and how you could be doing it better. I think that's the single best piece of
+             advice: constantly think about how you could be doing things better and questioning yourself.
+         </p>
+    </div>
     
 </body>
 </html>
