--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <title>one of my</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div>
-        <h1>All things are prossible for everyone</h1>
-         <h1>Because I believe it</h1>
+<body class="fnt-family" >
+   <div class="disply">
+     <div class="width">
+        <h1 class="border">All things are possible for everyone</h1>
+         <h1 class="border" id="color">Because I believe it</h1>
          <p>
             I think it's very important to have a feedback loop, where you're constantly thinking about 
             what you've done and how you could be doing it better. I think that's the single best piece of
              advice: constantly think about how you could be doing things better and questioning yourself.
          </p>
+         <a id="style" target="blank" href="google.com">QUESTION:</a>
+         <P>Everyone discouraged you but all possible</P>
+      </div>
+        <div class="width">
+            <img src="3 pic.png">
+        </div>
     </div>
-    
 </body>
 </html>
