--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>one of my</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<section id="1">
 <body class="fnt-family" >
    <div class="disply">
      <div class="width">
@@ -21,8 +22,32 @@
          <P>Everyone discouraged you but all possible</P>
       </div>
         <div class="width">
-            <img src="3 pic.png">
+            <img id="pic style" src="3 pic.png">
         </div>
     </div>
+</section>
+<section>
+    <div>
+        <h1>My future goals</h1>
+        <div>
+            <h1>Independent work</h1>
+            <p>
+                I Like independent work very much.Because my time constraint is not good to do any work. so, i amm coming to this kind pf work.
+            </p>
+        </div>
+        <div>
+            <h1>Like work place</h1>
+            <p>
+                I need more than luck to succed in affiliate business .The real purpose is to find a job of my choice by doing new things.
+            </p>
+        </div>
+        <div>
+            <h1>Death prepared</h1>
+            <p>
+                Must be preoared for death.That is the end result of allthis work.No one has the power to change that. We have to accept the eternal truth.
+             </p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
