--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
         <h1>My future goals</h1>
         <div>
             <h1>Independent work</h1>
+            <img src="devlopment.png">
             <p>
                 I Like independent work very much.Because my time constraint is not good to do any work. so, i amm coming to this kind pf work.
             </p>
         </div>
         <div>
             <h1>Like work place</h1>
+            <img src="like work.png">
             <p>
                 I need more than luck to succed in affiliate business .The real purpose is to find a job of my choice by doing new things.
             </p>
         </div>
         <div>
             <h1>Death prepared</h1>
+            <img src="death.png">
             <p>
                 Must be preoared for death.That is the end result of allthis work.No one has the power to change that. We have to accept the eternal truth.
              </p>
