--- a/index.html
+++ b/index.html
@@ -26,24 +26,25 @@
         </div>
     </div>
 </section>
-<section>
-    <div>
-        <h1>My future goals</h1>
-        <div>
+
+    <h1 id="aglin">My future goals</h1>
+    <div class="disply">
+        
+        <div class="widthside">
             <h1>Independent work</h1>
             <img src="devlopment.png">
             <p>
                 I Like independent work very much.Because my time constraint is not good to do any work. so, i amm coming to this kind pf work.
             </p>
         </div>
-        <div>
+        <div class="widthside">
             <h1>Like work place</h1>
-            <img src="like work.png">
+            <img  src="like work.png">
             <p>
                 I need more than luck to succed in affiliate business .The real purpose is to find a job of my choice by doing new things.
             </p>
         </div>
-        <div>
+        <div class="widthside">
             <h1>Death prepared</h1>
             <img src="death.png">
             <p>
@@ -51,6 +52,6 @@
              </p>
         </div>
     </div>
-</section>
+
 </body>
 </html>
