--- a/index.html
+++ b/index.html
@@ -57,5 +57,17 @@
         </div>
     </div>
 </section>
+     <div class="disply">
+    <div class="width">
+            <img id="cpic" src="2 nd pic.png" alt="">
+        </div>
+        <div id="Bbox" class="width">
+            <h2>MY THOUGHTS</h2>
+            <p>
+                I am a law student.but, I like working with technology.I want to creat my self in new way,I home i wiil be successful.
+                if you want to move forward in life,you have to have a lot of sacrifice and a lot of pursuit.To be successful,you have to be dligent and enterprising.
+            </p>
+        </div>
+    </div>   
 </body>
 </html>
