--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <section id="A">
 <body class="fnt-family" >
    <div class="disply">
-     <div class="width">
+     <div id="marginA" class="width">
         <h1 class="border">All things are possible for everyone</h1>
          <h1 class="border" id="color">Because I believe it</h1>
          <p>
@@ -18,7 +18,7 @@
             what you've done and how you could be doing it better. I think that's the single best piece of
              advice: constantly think about how you could be doing things better and questioning yourself.
          </p>
-         <a id="style" target="blank" href="google.com">QUESTION:</a>
+         <a class="styleA" target="blank" href="google.com">QUESTION:</a>
          <P>Everyone discouraged you but all possible</P>
       </div>
         <div class="width">
@@ -57,17 +57,37 @@
         </div>
     </div>
 </section>
+<section id="C">
      <div class="disply">
-    <div class="width">
-            <img id="cpic" src="2 nd pic.png" alt="">
+         <div class="width">
+            <img id="imgst" src="2 nd pic.png" alt="">
         </div>
-        <div id="Bbox" class="width">
+        <div class="width">
             <h2>MY THOUGHTS</h2>
             <p>
                 I am a law student.but, I like working with technology.I want to creat my self in new way,I home i wiil be successful.
                 if you want to move forward in life,you have to have a lot of sacrifice and a lot of pursuit.To be successful,you have to be dligent and enterprising.
             </p>
+            <a class="styleA" href="linkin.com">click me</a>
         </div>
-    </div>   
+    </div> 
+</section>  
+    <section id="D">
+      <div class="disply">
+        <div id="BOXR" class="width">
+            <h1>CSE field in future</h1> 
+            
+            <p>
+             Computer science is the study of computers and computing as well as their theoretical and practical applications.
+             Computer science applies the principles of mathematics, engineering, and logic to a plethora of functions, including algorithm formulation,
+             software and hardware development, and artificial intelligence.
+            </p>
+            <a class="styleA" target="blank" href="call me">CALL ME</a> 
+        </div>
+        <div>
+            <img src="pop.png">
+        </div>
+    </div> 
+</section>   
 </body>
 </html>
